# om-exporter

./: .gitignore  AGENT.md  CLOUD.md  Makefile  README.md  TODO.md  pyproject.toml
.cursor/: hook.json
src/om_exporter/: __init__.py  build.py  cli.py
src/om_exporter/conf/: domain.py
src/om_exporter/converter/: gasssian.py
src/om_exporter/grid/: __init__.py  gaussian_grid.py
