[project]
name = "om-exporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "omfiles>=1.0.1",
    "s3fs>=2026.1.0",
    "scipy>=1.17.0",
    "xarray>=2025.12.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
om-export = "om_exporter.cli:export"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "RUF022"]
ignore = ["F403", "E731"]
